Fix misaligned projectile hitbox (#162)
Also improves debugging Matter bodies positions

--- a/game/src/style.css
+++ b/game/src/style.css
@@ -22,13 +22,6 @@ body {
   font-size: 48px;
 }
 
-#matter {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-}
-
 #qr-code {
   width: 15% !important;
   height: auto !important;
